cloud/k8s/ingress/network-testing-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: network-testing-service
spec:
  selector:
    app: network-testing-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: network-testing-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: network-testing-app
  template:
    metadata:
      labels:
        app: network-testing-app
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "0.5"
            memory: "512Mi"
          requests:
            cpu: "0.1"
            memory: "128Mi"
